if(NOT LN_FREERTOS)
  add_library(ln_logger INTERFACE)
  target_include_directories(ln_logger INTERFACE include)
else()
  add_library(ln_logger)
  target_sources(ln_logger PRIVATE src/logger.cpp)
  target_compile_definitions(ln_logger PUBLIC LN_LOGGER)
  target_include_directories(ln_logger PUBLIC include)
  target_link_libraries(ln_logger PUBLIC ln_core FreeRTOS-Cpp)
endif()

add_library(ln::logger ALIAS ln_logger)
target_link_libraries(ln INTERFACE ln::logger)

add_library(ln_logger_cmds INTERFACE)
add_library(ln::logger::cmds ALIAS ln_logger_cmds)
target_sources(ln_logger_cmds INTERFACE src/cmds.cpp)
target_link_libraries(ln_logger_cmds INTERFACE ln::logger ln::shell)
